<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>ec</artifactId>
	<packaging>jar</packaging>
	<name>ec grammar</name>

	<groupId>org.antlr.grammars</groupId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<commons-io.version>2.16.1</commons-io.version>
		<target.jvm>1.17</target.jvm>
		<antlr.version>4.13.1</antlr.version>
		<antlr4test-maven-plugin.version>1.12</antlr4test-maven-plugin.version>
		<junit.version>5.11.0-M2</junit.version>
	</properties>
	<prerequisites>
		<maven>3.1.0</maven>
	</prerequisites>

	<developers>
		<developer>
			<id>Slapparoo</id>
			<name>Brook Smith</name>
			<email>me.brook.smith@gmail.com</email>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
	        <scope>provided</scope>
    	</dependency>
	</dependencies>
	<build>
		<plugins>

			<!-- mvn clean compile assembly:single -->
			<plugin>
			<artifactId>maven-assembly-plugin</artifactId>
			<configuration>
				<archive>
				<manifest>
					<mainClass>ec.lang.BasicWalk</mainClass>
				</manifest>
				</archive>
				<descriptorRefs>
				<descriptorRef>jar-with-dependencies</descriptorRef>
				</descriptorRefs>
			</configuration>
			<executions>
				<execution>
				<id>make-assembly</id> <!-- this is used for inheritance merges -->
				<phase>package</phase> <!-- bind to the packaging phase -->
				<goals>
					<goal>single</goal>
				</goals>
				</execution>
			</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>${antlr.version}</version>
				<configuration>
					<sourceDirectory>${basedir}/src/main/antlr4</sourceDirectory>
					<grammars>ec.g4</grammars>
					<visitor>true</visitor>
					<listener>true</listener>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
        	</plugin>	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.32</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>					
		</plugins>
	</build>
</project>
